Cambios para poder desplegar con Jenkins y Docker